Fix the z-index of the projects background
    - because we are using 2 layers of background, the title was hidden behind the bg image
    - set the bg image to z -2, then the filter to z -1 to fix this problem

--- a/src/css/layout/_sections.scss
+++ b/src/css/layout/_sections.scss
@@ -44,6 +44,7 @@
         width: 100%;
         height: 100%;
         animation: zoom 12s infinite;
+        z-index: -2;
     }
     &--pulse {
         position: absolute;
@@ -52,6 +53,7 @@
         width: 100%;
         height: 100%;
         animation: pulse 12s infinite;
+        z-index: -1;
     }
 }
 
